4.2.x/sidebar.md
---
---

* [Planning](#planning)
    *   [Architecture](/$version/planning/Architecture.html)
    *   [Installation Requirements](/$version/planning/Installation-Requirements.html)
    *   [Security Guide](/$version/planning/Security-Guide.html)
    *   [High Availability Guide](/$version/planning/High-Availability-Guide.html)
    *   [Upgrade Guide](/$version/planning/Upgrade-Guide.html)

* [Installation](#installation)
    *   [WAR Overlay](/$version/installation/Maven-Overlay-Installation.html)
    *   [Docker](/$version/installation/Docker-Installation.html)
    *   [Troubleshooting Guide](/$version/installation/Troubleshooting-Guide.html)

* [Authentication](#casauthentication)
    *   [Overview](/$version/installation/Configuring-Authentication-Components.html)
    *   [Database](/$version/installation/Database-Authentication.html)
    *   [JAAS](/$version/installation/JAAS-Authentication.html)
    *   [X.509](/$version/installation/X509-Authentication.html)
    *   [LDAP](/$version/installation/LDAP-Authentication.html)
    *   [OAuth/OpenId](/$version/installation/OAuth-OpenId-Authentication.html)
    *   [RADIUS](/$version/installation/RADIUS-Authentication.html)
    *   [SPNEGO](/$version/installation/SPNEGO-Authentication.html)
    *   [Remote Address](/$version/installation/Remote-Address-Authentication.html)
    *   [YubiKey](/$version/installation/YubiKey-Authentication.html)
    *   [Trusted](/$version/installation/Trusted-Authentication.html)
    *   [JWT](/$version/installation/JWT-Authentication.html)
    *   [Stormpath](/$version/installation/Stormpath-Authentication.html)
    *   [Basic](/$version/installation/Basic-Authentication.html)
    *   [Apache Shiro](/$version/installation/Shiro-Authentication.html)
    *   [MongoDb](/$version/installation/MongoDb-Authentication.html)
    *   [Pac4j](/$version/installation/Pac4j-Authentication.html)
    *   [Whitelist](/$version/installation/Whitelist-Authentication.html)
    *   [Blacklist](/$version/installation/Blacklist-Authentication.html)
    *   [Proxy Authentication](/$version/installation/Configuring-Proxy-Authentication.html)
    *   [MFA](/$version/installation/Configuring-Multifactor-Authentication.html)
    *   [Throttling](/$version/installation/Configuring-Authentication-Throttling.html)
    *   [SSO Session Cookie](/$version/installation/Configuring-SSO-Session-Cookie.html)
    *   [Logout & SLO](/$version/installation/Logout-Single-Signout.html)

* [Ticketing](#ticketing)
    *   [Overview](/$version/installation/Configuring-Ticketing-Components.html)
    *   [Hazelcast](/$version/installation/Hazelcast-Ticket-Registry.html)
    *   [Ehcache](/$version/installation/Ehcache-Ticket-Registry.html)
    *   [Memcached](/$version/installation/Memcached-Ticket-Registry.html)
    *   [JPA](/$version/installation/JPA-Ticket-Registry.html)
    *   [Ignite](/$version/installation/Ignite-Ticket-Registry.html)
    *   [Couchbase](/$version/installation/Couchbase-Ticket-Registry.html)
    *   [Infinispan](/$version/installation/Infinispan-Ticket-Registry.html)

* [Service Management](#service_management)
    *   [Overview](/$version/installation/Service-Management.html)
    *   [Access Strategy](/$version/installation/Configuring-Service-Access-Strategy.html)
    *   [Proxy Policy](/$version/installation/Configuring-Service-Proxy-Policy.html)
    *   [Custom Properties](/$version/installation/Configuring-Service-Custom-Properties.html)
    *   [Persistence](#persistence)
        *   [JSON](/$version/installation/JSON-Service-Management.html)
        *   [Mongo](/$version/installation/Mongo-Service-Management.html)
        *   [LDAP](/$version/installation/LDAP-Service-Management.html)
        *   [JPA](/$version/installation/JPA-Service-Management.html)
        *   [Couchbase](/$version/installation/Couchbase-Service-Management.html)

* [Logs & Audits](#logs_audits)
    *   [Logging](/$version/installation/Logging.html)
    *   [Audits](/$version/installation/Audits.html)
    *   [Monitoring & Statistics](/$version/installation/Monitoring-Statistics.html)

* [User Interface](#user_interface)
    *   [UI Customization](/$version/installation/User-Interface-Customization.html)
    *   [Webflow Customization](/$version/installation/Webflow-Customization.html)

* [Integration](#integration)
    *   [CAS Protocol](/$version/protocol/CAS-Protocol.html)
    *   [OpenID Protocol](/$version/protocol/OpenID-Protocol.html)
    *   [OAuth Protocol](/$version/protocol/OAuth-Protocol.html)
    *   [SAML Protocol](/$version/protocol/SAML-Protocol.html)
        *   [Google Apps](/$version/integration/Google-Apps-Integration.html)
        *   [ADFS](/$version/integration/ADFS-Integration.html)
    *   [REST Protocol](/$version/protocol/REST-Protocol.html)
    *   [Delegate Authentication](/$version/integration/Delegate-Authentication.html)
    *   [CAS Clients](/$version/integration/CAS-Clients.html)
    *   [Attribute Release](/$version/integration/Attribute-Release.html)
    *   [ClearPass](/$version/integration/ClearPass.html)
    *   [Shibboleth](/$version/integration/Shibboleth.html)

* [Developer](#developer)
    *   [Javadocs](/$version/javadocs/index.html)
    *   [Issue Tracker](https://github.com/apereo/cas/issues)
    *   [Contributor Guidelines](/cas/developer/Contributor-Guidelines.html)
    *   [Code Conventions](/cas/developer/Code-Conventions.html)
    *   [Release Policy](/cas/developer/Release-Policy.html)
    *   [Release Process](/cas/developer/Release-Process.html)
    *   [Build Process](/cas/developer/Build-Process.html)
    *   [Maintenance Policy](/cas/developer/Maintenance-Policy.html)
